# libproxc

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  Makefile  README.md  meson.build  meson_options.txt  slog.cfg
examples/: commstime.c  commstime.cpp  concurrent_fibonacci.cpp  concurrent_mandelbrot.cpp  concurrent_mandelbrot_nc.cpp  concurrent_sieve.cpp  csp_test.c  ctx_bench.c  dining_philosophers.cpp  meson.build  monte_carlo_pi.cpp  piping.cpp  sieve.c  stressed_alt.cpp
include/: meson.build  proxc.hpp
include/proxc/: alt.hpp  channel.hpp  config.hpp  context.hpp  exceptions.hpp  parallel.hpp  process.hpp  proxc.hpp  scheduler.hpp  spinlock.hpp  this_proc.hpp  thread_pool.hpp  timer.hpp  traits.hpp  version.hpp  work_steal_deque.hpp
include/proxc/alt/: alt.hpp  choice_base.hpp  choice_recv.hpp  choice_send.hpp  choice_timeout.hpp  state.hpp  sync.hpp
include/proxc/channel/: async.hpp  base.hpp  op.hpp  op_result.hpp  rx.hpp  sync.hpp  tx.hpp
include/proxc/detail/: apply.hpp  circular_array.hpp  cpu_relax.hpp  delegate.hpp  hook.hpp  mpsc_queue.hpp  num_cpus.hpp  queue.hpp  spinlock.hpp  spsc_queue.hpp  traits.hpp  work_steal_deque.hpp  xorshift.hpp
include/proxc/policy/: policy_base.hpp  work_stealing_policy.hpp
include/proxc/runtime/: context.hpp  scheduler.hpp
include/proxc/scheduling_policy/: policy_base.hpp  round_robin.hpp  work_stealing.hpp
include/proxc/timer/: egg_timer.hpp  interface.hpp  rep_timer.hpp
proxc/: README.md
proxc++/: README.md  meson.build  meson_options.txt
proxc++/examples/: commstime.cpp  concurrent_fibonacci.cpp  concurrent_mandelbrot.cpp  concurrent_mandelbrot_nc.cpp  dining_philosophers.cpp  monte_carlo_pi.cpp  stressed_alt.cpp
proxc++/include/: meson.build
proxc++/include/proxc/: alt.hpp  process.hpp  version.hpp
proxc++/include/proxc/alt/: choice_base.hpp  choice_recv.hpp  choice_send.hpp
proxc++/include/proxc/channel/: op.hpp  rx.hpp  sync.hpp  tx.hpp
proxc++/include/proxc/detail/: cpu_relax.hpp  traits.hpp
proxc++/include/proxc/runtime/: scheduler.hpp
proxc++/include/proxc/scheduling_policy/: round_robin.hpp  work_stealing.hpp
proxc++/src/: process.cpp  scheduler.cpp
proxc++/src/scheduling_policy/: round_robin.cpp  work_stealing.cpp
proxc++/tests/: test_alt.cpp  test_circular_array.cpp  test_context.cpp  test_scheduler.cpp  test_timer.cpp  test_work_steal_deque.cpp  test_work_stealing_policy.cpp
proxc/src/: context.c  proc.c  proc.h  proxc.h  scheduler.h
proxc/test/: alt_demo.c  chan_any2any.c
src/: aligned_alloc.hpp  alt.c  alt.cpp  alt.h  chan.c  chan.h  context.c  context.cpp  context.h  coroutine.c  coroutine.h  coroutine_internal.c  coroutine_internal.h  csp.c  csp.h  debug.h  internal.h  kt_man.c  kt_man.h  main.c  main.cpp  meson.build  par.c  par.h  proc.c  proc.h  process.cpp  process.hpp  proxc.c  proxc.cpp  proxc.h  scheduler.c  scheduler.cpp  scheduler.h  thread.c  thread.h  thread_pool.hpp  utils.h  work_steal_deque.hpp  work_stealing_policy.cpp
src/alt/: choice_base.cpp
src/scheduling_policy/: round_robin.cpp  work_stealing.cpp
src/util/: debug.h  util.h
src2/: alt.h  chan.h  csp.h  proxc.c  scheduler.c
src2/util/: debug.h
test/: alt_demo.c  chan_any2any.c  chan_any2one.c  chanbench.c  commstime.c  csp_test.c  sieve.c
tests/: meson.build  obj.hpp  setup.hpp  simple.cpp  test_aligned_alloc.cpp  test_alt.cpp  test_channel_async.cpp  test_channel_sync.cpp  test_circular_array.cpp  test_context.cpp  test_parallel.cpp  test_process.cpp  test_scheduler.cpp  test_spsc_queue.cpp  test_thread_pool.cpp  test_timer.cpp  test_work_steal_deque.cpp  test_work_stealing_policy.cpp
tmp_pseudo/: alt_pseudo.txt  chan_pseudo.txt
