
install_headers('proxc.hpp')
install_headers(
    'proxc/channel.hpp',
    'proxc/config.hpp',
    'proxc/context.hpp',
    'proxc/parallel.hpp',
    'proxc/process.hpp',
    'proxc/scheduler.hpp',
    'proxc/spinlock.hpp',
    'proxc/this_proc.hpp',
    'proxc/traits.hpp',
    'proxc/version.hpp',
    'proxc/work_steal_deque.hpp',
    subdir : 'proxc')
install_headers(
    'proxc/alt/alt.hpp',
    'proxc/alt/choice_base.hpp',
    'proxc/alt/choice_send.hpp',
    'proxc/alt/choice_recv.hpp',
    'proxc/alt/choice_timeout.hpp',
    subdir : 'proxc/alt')
install_headers(
    'proxc/channel/op_result.hpp',
    'proxc/channel/sync.hpp',
    'proxc/channel/tx.hpp',
    'proxc/channel/rx.hpp',
    'proxc/channel/op.hpp',
    subdir : 'proxc/channel')
install_headers(
    'proxc/timer/interface.hpp',
    'proxc/timer/egg_timer.hpp',
    'proxc/timer/rep_timer.hpp',
    subdir : 'proxc/timer')
install_headers(
    'proxc/scheduling_policy/policy_base.hpp',
    'proxc/scheduling_policy/round_robin.hpp',
    'proxc/scheduling_policy/work_stealing.hpp',
    subdir : 'proxc/scheduling_policy')
install_headers(
    'proxc/detail/circular_array.hpp',
    'proxc/detail/cpu_relax.hpp',
    'proxc/detail/delegate.hpp',
    'proxc/detail/hook.hpp',
    'proxc/detail/queue.hpp',
    subdir : 'proxc/detail')
